# KinectFusion

./: CMakeLists.txt  KinectFusion.cpp  KinectFusion.h  README.md  common.h  main.cpp
cuda/: cuda_common.h  gn_solver.cu  gn_solver.h  marching_cubes.cu  pose_estimate.cu  surface_measurement.cu  surface_prediction.cu  surface_reconstruction.cu
